--- a/src/main/java/fr/ul/miage/lucas/Window.fxml
+++ b/src/main/java/fr/ul/miage/lucas/Window.fxml
@@ -15,7 +15,7 @@
             <Font size="18.0" />
          </font>
       </Text>
-      <Button fx:id="button" layoutX="215.0" layoutY="200.0" mnemonicParsing="false" text="Lancer" />
+      <Button fx:id="button" layoutX="215.0" layoutY="200.0" mnemonicParsing="false" text="Lancer" onAction="#coulerEau"/>
       <ProgressBar fx:id="progressBar" layoutX="144.0" layoutY="141.0" prefWidth="200.0" progress="0.0" />
    </children>
 </AnchorPane>
