--- a/src/main/java/fr/ul/miage/lucas/Window.fxml
+++ b/src/main/java/fr/ul/miage/lucas/Window.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -15,7 +16,11 @@
             <Font size="18.0" />
          </font>
       </Text>
-      <Button fx:id="button" layoutX="215.0" layoutY="200.0" mnemonicParsing="false" text="Lancer" onAction="#coulerEau"/>
+      <Button fx:id="button" layoutX="219.0" layoutY="175.0" mnemonicParsing="false" onAction="#coulerEau" text="Lancer" textFill="BLUE">
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor></Button>
       <ProgressBar fx:id="progressBar" layoutX="144.0" layoutY="141.0" prefWidth="200.0" progress="0.0" />
+      <Button fx:id="stopButton" layoutX="224.0" layoutY="213.0" mnemonicParsing="false" onAction='#stopperEau' text="Stop" textFill="RED" />
    </children>
 </AnchorPane>
