--- a/src/main/java/fr/ul/miage/lucas/Window.fxml
+++ b/src/main/java/fr/ul/miage/lucas/Window.fxml
@@ -2,26 +2,28 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="pauseButton" prefHeight="334.0" prefWidth="458.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.ul.miage.lucas.WindowController">
+<AnchorPane fx:id="pauseButton" prefHeight="473.0" prefWidth="602.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.ul.miage.lucas.WindowController">
    <children>
       <TilePane layoutX="-148.0" layoutY="-148.0" prefHeight="348.0" prefWidth="348.0" />
-      <Text fill="#ee0606" layoutX="147.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TP2 Lucas Oberhausser">
+      <Text fill="#ee0606" layoutX="209.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TP2 Lucas Oberhausser">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <Button fx:id="button" layoutX="173.0" layoutY="167.0" mnemonicParsing="false" onAction="#coulerEau" prefHeight="25.0" prefWidth="143.0" text="Lancer" textFill="BLUE">
+      <Button fx:id="button" layoutX="218.0" layoutY="308.0" mnemonicParsing="false" onAction="#coulerEau" prefHeight="25.0" prefWidth="177.0" text="Lancer" textFill="BLUE">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor></Button>
-      <ProgressBar fx:id="progressBar" layoutX="145.0" layoutY="118.0" prefWidth="200.0" progress="0.0" />
-      <Button fx:id="stopButton" layoutX="254.0" layoutY="200.0" mnemonicParsing="false" onAction="#stopperEau" prefHeight="25.0" prefWidth="62.0" text="Stop" textFill="RED" />
-      <Button layoutX="174.0" layoutY="200.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="62.0" text="Pause" textFill="LIME" />
+      <ProgressBar fx:id="progressBar" layoutX="163.0" layoutY="252.0" prefHeight="18.0" prefWidth="288.0" progress="0.0" />
+      <Button fx:id="stopButton" layoutX="314.0" layoutY="346.0" mnemonicParsing="false" onAction="#stopperEau" prefHeight="25.0" prefWidth="84.0" text="Stop" textFill="RED" />
+      <Button layoutX="218.0" layoutY="346.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="84.0" text="Pause" textFill="LIME" />
+      <Label fx:id="label" layoutX="293.0" layoutY="220.0" text="Label" />
    </children>
 </AnchorPane>
