--- a/src/main/java/fr/ul/miage/lucas/Window.fxml
+++ b/src/main/java/fr/ul/miage/lucas/Window.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="pauseButton" prefHeight="473.0" prefWidth="602.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.ul.miage.lucas.WindowController">
+<AnchorPane prefHeight="473.0" prefWidth="602.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.ul.miage.lucas.WindowController">
    <children>
       <TilePane layoutX="-148.0" layoutY="-148.0" prefHeight="348.0" prefWidth="348.0" />
       <Text fill="#ee0606" layoutX="209.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TP2 Lucas Oberhausser">
@@ -22,8 +22,8 @@
             <Cursor fx:constant="DEFAULT" />
          </cursor></Button>
       <ProgressBar fx:id="progressBar" layoutX="163.0" layoutY="252.0" prefHeight="18.0" prefWidth="288.0" progress="0.0" />
-      <Button fx:id="stopButton" layoutX="314.0" layoutY="346.0" mnemonicParsing="false" onAction="#stopperEau" prefHeight="25.0" prefWidth="84.0" text="Stop" textFill="RED" />
-      <Button layoutX="218.0" layoutY="346.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="84.0" text="Pause" textFill="LIME" />
+      <Button fx:id="stopButton" layoutX="314.0" layoutY="346.0" mnemonicParsing="false" onAction="#recommencer" prefHeight="25.0" prefWidth="84.0" text="Stop" textFill="RED" />
+      <Button fx:id="pauseButton" layoutX="218.0" layoutY="346.0" mnemonicParsing="false" onAction="#stopperEau" prefHeight="24.0" prefWidth="84.0" text="Pause" textFill="LIME" />
       <Label fx:id="label" layoutX="293.0" layoutY="220.0" text="Label" />
    </children>
 </AnchorPane>
