--- a/src/main/java/fr/ul/miage/lucas/Window.fxml
+++ b/src/main/java/fr/ul/miage/lucas/Window.fxml
@@ -4,26 +4,35 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
 
 <AnchorPane prefHeight="473.0" prefWidth="602.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.ul.miage.lucas.WindowController">
    <children>
       <TilePane layoutX="-148.0" layoutY="-148.0" prefHeight="348.0" prefWidth="348.0" />
-      <Text fill="#ee0606" layoutX="209.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TP2 Lucas Oberhausser">
+      <Text fill="#ee0606" layoutX="216.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TP2 Lucas Oberhausser">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <Button fx:id="button" layoutX="218.0" layoutY="308.0" mnemonicParsing="false" onAction="#coulerEau" prefHeight="25.0" prefWidth="177.0" text="Lancer" textFill="BLUE">
+      <Button fx:id="button" layoutX="219.0" layoutY="148.0" mnemonicParsing="false" onAction="#coulerEau" prefHeight="25.0" prefWidth="177.0" text="Lancer" textFill="BLUE">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor></Button>
-      <ProgressBar fx:id="progressBar" layoutX="163.0" layoutY="252.0" prefHeight="18.0" prefWidth="288.0" progress="0.0" />
-      <Button fx:id="stopButton" layoutX="314.0" layoutY="346.0" mnemonicParsing="false" onAction="#recommencer" prefHeight="25.0" prefWidth="84.0" text="Stop" textFill="RED" />
-      <Button fx:id="pauseButton" layoutX="218.0" layoutY="346.0" mnemonicParsing="false" onAction="#stopperEau" prefHeight="24.0" prefWidth="84.0" text="Pause" textFill="LIME" />
-      <Label fx:id="label" layoutX="293.0" layoutY="220.0" text="Label" />
+      <ProgressBar fx:id="progressBar" layoutX="157.0" layoutY="108.0" prefHeight="18.0" prefWidth="288.0" progress="0.0" />
+      <Button fx:id="stopButton" layoutX="312.0" layoutY="188.0" mnemonicParsing="false" onAction="#recommencer" prefHeight="25.0" prefWidth="84.0" text="Stop" textFill="RED" />
+      <Button fx:id="pauseButton" layoutX="219.0" layoutY="188.0" mnemonicParsing="false" onAction="#stopperEau" prefHeight="24.0" prefWidth="84.0" text="Pause" textFill="RED" />
+      <TextFlow fx:id="text" layoutX="207.0" layoutY="73.0" prefHeight="25.0" prefWidth="200.0" />
+      <Slider fx:id="capSlider" layoutX="46.0" layoutY="353.0" />
+      <Slider fx:id="robSlider" layoutX="237.0" layoutY="353.0" />
+      <Button fx:id="majButton" layoutX="241.0" layoutY="395.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="133.0" text="Mettre à jour" textFill="#00c800" />
+      <Slider fx:id="fuiSlider" layoutX="420.0" layoutY="353.0" />
+      <Label layoutX="93.0" layoutY="326.0" text="Capacité" />
+      <Label layoutX="287.0" layoutY="326.0" text="Robinet" />
+      <Label layoutX="476.0" layoutY="326.0" text="Fuite" />
    </children>
 </AnchorPane>
