--- a/src/main/java/fr/ul/miage/lucas/Window.fxml
+++ b/src/main/java/fr/ul/miage/lucas/Window.fxml
@@ -27,10 +27,10 @@
       <Button fx:id="stopButton" layoutX="312.0" layoutY="188.0" mnemonicParsing="false" onAction="#recommencer" prefHeight="25.0" prefWidth="84.0" text="Stop" textFill="RED" />
       <Button fx:id="pauseButton" layoutX="219.0" layoutY="188.0" mnemonicParsing="false" onAction="#stopperEau" prefHeight="24.0" prefWidth="84.0" text="Pause" textFill="RED" />
       <TextFlow fx:id="text" layoutX="207.0" layoutY="73.0" prefHeight="25.0" prefWidth="200.0" />
-      <Slider fx:id="capSlider" layoutX="46.0" layoutY="353.0" />
-      <Slider fx:id="robSlider" layoutX="237.0" layoutY="353.0" />
-      <Button fx:id="majButton" layoutX="241.0" layoutY="395.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="133.0" text="Mettre à jour" textFill="#00c800" />
-      <Slider fx:id="fuiSlider" layoutX="420.0" layoutY="353.0" />
+      <Slider fx:id="capSlider" layoutX="46.0" layoutY="353.0" majorTickUnit="1000.0" max="5000.0" min="50.0" showTickMarks="true" />
+      <Slider fx:id="robSlider" layoutX="237.0" layoutY="353.0" majorTickUnit="100.0" max="500.0" showTickMarks="true" />
+      <Button fx:id="majButton" layoutX="241.0" layoutY="395.0" mnemonicParsing="false" onAction="#miseAJour" prefHeight="25.0" prefWidth="133.0" text="Mettre à jour" textFill="#00c800" />
+      <Slider fx:id="fuiSlider" layoutX="420.0" layoutY="353.0" majorTickUnit="100.0" max="500.0" showTickMarks="true" />
       <Label layoutX="93.0" layoutY="326.0" text="Capacité" />
       <Label layoutX="287.0" layoutY="326.0" text="Robinet" />
       <Label layoutX="476.0" layoutY="326.0" text="Fuite" />
