--- a/src/main/java/fr/ul/miage/lucas/Window.fxml
+++ b/src/main/java/fr/ul/miage/lucas/Window.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.text.TextFlow?>
 
 <AnchorPane prefHeight="473.0" prefWidth="602.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.ul.miage.lucas.WindowController">
    <children>
@@ -26,13 +25,14 @@
       <ProgressBar fx:id="progressBar" layoutX="157.0" layoutY="108.0" prefHeight="18.0" prefWidth="288.0" progress="0.0" />
       <Button fx:id="stopButton" layoutX="312.0" layoutY="188.0" mnemonicParsing="false" onAction="#recommencer" prefHeight="25.0" prefWidth="84.0" text="Stop" textFill="RED" />
       <Button fx:id="pauseButton" layoutX="219.0" layoutY="188.0" mnemonicParsing="false" onAction="#stopperEau" prefHeight="24.0" prefWidth="84.0" text="Pause" textFill="RED" />
-      <TextFlow fx:id="text" layoutX="207.0" layoutY="73.0" prefHeight="25.0" prefWidth="200.0" />
       <Slider fx:id="capSlider" layoutX="46.0" layoutY="353.0" majorTickUnit="1000.0" max="5000.0" min="50.0" showTickMarks="true" />
       <Slider fx:id="robSlider" layoutX="237.0" layoutY="353.0" majorTickUnit="100.0" max="500.0" showTickMarks="true" />
       <Button fx:id="majButton" layoutX="241.0" layoutY="395.0" mnemonicParsing="false" onAction="#miseAJour" prefHeight="25.0" prefWidth="133.0" text="Mettre à jour" textFill="#00c800" />
       <Slider fx:id="fuiSlider" layoutX="420.0" layoutY="353.0" majorTickUnit="100.0" max="500.0" showTickMarks="true" />
-      <Label fx:id="capLabel" layoutX="70.0" layoutY="326.0" text="Capacité" />
-      <Label fx:id="robLabel" layoutX="261.0" layoutY="326.0" text="Robinet" />
-      <Label fx:id="fuiLabel" layoutX="445.0" layoutY="326.0" text="Fuite" />
+      <Label fx:id="capLabel" layoutX="74.0" layoutY="326.0" prefHeight="17.0" prefWidth="84.0" text="Capacité : 50" />
+      <Label fx:id="robLabel" layoutX="279.0" layoutY="326.0" text="Robinet : 0" textAlignment="CENTER" />
+      <Label fx:id="fuiLabel" layoutX="465.0" layoutY="326.0" text="Fuite : 0" textAlignment="CENTER" />
+      <Label fx:id="loadingLabel" layoutX="231.0" layoutY="77.0" prefHeight="17.0" prefWidth="152.0" textAlignment="CENTER" />
+      <Label fx:id="errorLabel" layoutX="133.0" layoutY="428.0" prefHeight="17.0" prefWidth="348.0" textAlignment="CENTER" textFill="RED" />
    </children>
 </AnchorPane>
