--- a/src/main/java/fr/ul/miage/lucas/Window.fxml
+++ b/src/main/java/fr/ul/miage/lucas/Window.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -13,11 +14,6 @@
 <AnchorPane prefHeight="473.0" prefWidth="602.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.ul.miage.lucas.WindowController">
    <children>
       <TilePane layoutX="-148.0" layoutY="-148.0" prefHeight="348.0" prefWidth="348.0" />
-      <Text fill="#ee0606" layoutX="216.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TP2 Lucas Oberhausser">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Text>
       <Button fx:id="button" layoutX="219.0" layoutY="148.0" mnemonicParsing="false" onAction="#coulerEau" prefHeight="25.0" prefWidth="177.0" text="Lancer" textFill="BLUE">
          <cursor>
             <Cursor fx:constant="DEFAULT" />
@@ -27,12 +23,23 @@
       <Button fx:id="pauseButton" layoutX="219.0" layoutY="188.0" mnemonicParsing="false" onAction="#stopperEau" prefHeight="24.0" prefWidth="84.0" text="Pause" textFill="RED" />
       <Slider fx:id="capSlider" layoutX="46.0" layoutY="353.0" majorTickUnit="1000.0" max="5000.0" min="50.0" showTickMarks="true" />
       <Slider fx:id="robSlider" layoutX="237.0" layoutY="353.0" majorTickUnit="100.0" max="500.0" showTickMarks="true" />
-      <Button fx:id="majButton" layoutX="241.0" layoutY="395.0" mnemonicParsing="false" onAction="#miseAJour" prefHeight="25.0" prefWidth="133.0" text="Mettre à jour" textFill="#00c800" />
       <Slider fx:id="fuiSlider" layoutX="420.0" layoutY="353.0" majorTickUnit="100.0" max="500.0" showTickMarks="true" />
       <Label fx:id="capLabel" alignment="CENTER" layoutX="74.0" layoutY="326.0" prefHeight="17.0" prefWidth="84.0" text="Capacité : 50" />
       <Label fx:id="robLabel" alignment="CENTER" layoutX="279.0" layoutY="326.0" text="Robinet : 0" textAlignment="CENTER" />
       <Label fx:id="fuiLabel" alignment="CENTER" layoutX="465.0" layoutY="326.0" text="Fuite : 0" textAlignment="CENTER" />
       <Label fx:id="resultLabel" alignment="CENTER" layoutX="236.0" layoutY="77.0" prefHeight="17.0" prefWidth="152.0" textAlignment="CENTER" textFill="LIME" />
       <Label fx:id="errorLabel" alignment="CENTER" layoutX="133.0" layoutY="428.0" prefHeight="17.0" prefWidth="348.0" textAlignment="CENTER" textFill="RED" />
+      <BorderPane prefHeight="473.0" prefWidth="602.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <top>
+            <Text fill="#ee0606" strokeType="OUTSIDE" strokeWidth="0.0" text="TP2 Lucas Oberhausser" BorderPane.alignment="CENTER">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+         </top>
+         <bottom>
+            <Button fx:id="majButton" mnemonicParsing="false" onAction="#miseAJour" prefHeight="25.0" prefWidth="133.0" text="Mettre à jour" textFill="#00c800" BorderPane.alignment="CENTER" />
+         </bottom>
+      </BorderPane>
    </children>
 </AnchorPane>
